--- a/documentation/layout/layout-splitpanel.asciidoc
+++ b/documentation/layout/layout-splitpanel.asciidoc
@@ -27,6 +27,7 @@ You can set the two components with the [methodname]#setFirstComponent()# and
 [methodname]#setSecondComponent()# methods, or with the regular
 [methodname]#addComponent()# method.
 
+// TODO replace Tree with something else in the example code and screenshot
 
 [source, java]
 ----
@@ -49,7 +50,6 @@ hsplit.setSecondComponent(vsplit);
 vsplit.addComponent(new Label("Here's the upper panel"));
 vsplit.addComponent(new Label("Here's the lower panel"));
 ----
-See the http://demo.vaadin.com/book-examples-vaadin7/book#layout.splitpanel.basic[on-line example, window="_blank"].
 
 The result is shown in <<figure.splitpanel.basic>>. Observe that the tree is cut
 horizontally as it can not fit in the layout. If its height exceeds the height
@@ -76,7 +76,6 @@ hsplit.setSecondComponent(new Label("25% wide panel"));
 // Set the position of the splitter as percentage
 hsplit.setSplitPosition(75, Sizeable.UNITS_PERCENTAGE);
 ----
-See the http://demo.vaadin.com/book-examples-vaadin7/book#layout.splitpanel.splitposition[on-line example, window="_blank"].
 
 Another version of the [methodname]#setSplitPosition()# method allows leaving
 out the unit, using the same unit as previously. The method also has versions
@@ -93,7 +92,6 @@ locked, the move handle in the middle of the bar is disabled.
 // Lock the splitter
 hsplit.setLocked(true);
 ----
-See the http://demo.vaadin.com/book-examples-vaadin7/book#layout.splitpanel.splitposition[on-line example, window="_blank"].
 
 Setting the split position programmatically and locking the split bar is
 illustrated in <<figure.component.splitpanel.splitposition>>.
