--- a/documentation/layout/layout-formlayout.asciidoc
+++ b/documentation/layout/layout-formlayout.asciidoc
@@ -28,8 +28,7 @@ The following example shows typical use of [classname]#FormLayout# in a form:
 FormLayout form = new FormLayout();
 TextField tf1 = new TextField("Name");
 tf1.setIcon(FontAwesome.USER);
-tf1.setRequired(true);
-tf1.addValidator(new NullValidator("Must be given", false));
+tf1.setRequiredIndicatorVisible(true);
 form.addComponent(tf1);
 
 TextField tf2 = new TextField("Street address");
@@ -38,11 +37,12 @@ form.addComponent(tf2);
 
 TextField tf3 = new TextField("Postal code");
 tf3.setIcon(FontAwesome.ENVELOPE);
-tf3.addValidator(new IntegerRangeValidator("Doh!", 1, 99999));
 form.addComponent(tf3);
+// normally comes from validation by Binder
+tf3.setComponentError(new UserError("Doh!"));
 ----
 
-The resulting layout will look as follows. The error message shows in a tooptip
+The resulting layout will look as follows. The error message shows in a tooltip
 when you hover the mouse pointer over the error indicator.
 
 [[figure.layout.formlayout]]
