--- a/documentation/layout/layout-overview.asciidoc
+++ b/documentation/layout/layout-overview.asciidoc
@@ -56,7 +56,7 @@ Or in the declarative format (roughly):
   <vaadin-label>The Ultimate Cat Finder</vaadin-label>
 
   <vaadin-horizontal-layout>
-    <vaadin-tree caption="Possible Places"/>
+    <vaadin-radio-button-group caption="Possible Places"/>
     <vaadin-panel/>
     ...
   </vaadin-horizontal-layout>
